// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Human Revilution > Should render Human 1`] = `
<div>
  <button
    type="button"
  >
    Click Me
  </button>
  <h1>
    Monkey
  </h1>
</div>
`;

exports[`Human Revilution > Should render magnificent monkey 1`] = `
<div>
  <button
    type="button"
  >
    Click Me
  </button>
  <h1>
    Monkey
  </h1>
</div>
`;

exports[`Rinos Component > Should render magnificent monkey 1`] = `
<div>
  <button
    type="button"
  >
    Click Me
  </button>
  <h1>
    Magnificent Monkeys
  </h1>
</div>
`;
